--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="2.5.0" targetFramework="net45" />
-  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net45" />
+  <package id="CommandLineParser" version="2.5.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net45" requireReinstallation="true" />
   <package id="EsapiEssentials" version="2.0.0" targetFramework="net45" />
   <package id="EsapiEssentials.PluginRunner" version="2.0.0" targetFramework="net45" />
   <package id="MSFT.ParallelExtensionsExtras" version="1.2.0" targetFramework="net45" />
