--- a/AutoRing_SRS.Runner/packages.config
+++ b/AutoRing_SRS.Runner/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.5.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
